# custom-lang

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Constants.hpp.256126F86E8A1488.idx  Error.hpp.767DD4957B680003.idx  Scanner.cpp.B2DEF33309E0E36C.idx  Scanner.hpp.D0C1122E9D0C5EC6.idx  ScannerError.cpp.8D0027D9910602A6.idx  ScannerError.hpp.6A427C318E00194E.idx  String.cpp.35DBF7908DB8415E.idx  String.hpp.A5DD91DAA6CA296C.idx  Token.cpp.5B119276DE3FB5B7.idx  Token.hpp.0C4A1BBDADC0EF4C.idx  Value.cpp.C0C0BA5101BFE180.idx  Value.hpp.BCC50787DA8BA1DF.idx  main.cpp.0AEEA231BF3B7F91.idx
src/cpp/: Token.cpp  main.cpp
src/cpp/compiler/: Parser.cpp  ScopeStack.cpp  Stmt.cpp
src/cpp/compiler/expression/: Expr.cpp  String.cpp  Value.cpp
src/cpp/error/: CompilerError.cpp  InterpreterError.cpp  ScannerError.cpp
src/cpp/interpreter/: Callable.cpp  ExpressionVisitor.cpp  Interpreter.cpp  StatementVisitor.cpp  SymbolTable.cpp
src/cpp/scanner/: Scanner.cpp  Token.cpp
src/include/: Constants.hpp  Token.hpp
src/include/compiler/: Parser.hpp  ScopeStack.hpp  Stmt.hpp
src/include/compiler/expression/: Expr.hpp  String.hpp  Value.hpp
src/include/error/: CompilerError.hpp  Error.hpp  InterpreterError.hpp  ScannerError.hpp
src/include/interpreter/: CallStack.hpp  Callable.hpp  ExpressionVisitor.hpp  Interpreter.hpp  StackFrame.hpp  StatementVisitor.hpp  SymbolTable.hpp
src/include/scanner/: Scanner.hpp  Token.hpp
